# teachers-gitlab

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  mff-gitlab.py  mff_gitlab.py  pyproject.toml  requirements.txt  setup.py  teachers_gitlab.py  teachers_gitlab.sh
.github/workflows/: release.yml
d3s/: gitlab.py
doc/: development.rst  index.rst
doc/commands/: clone.rst  index.rst
doc/how-to/: index.rst
matfyz/: gitlab.py
matfyz/gitlab/: teachers_gitlab.py  utils.py
src/teachers_gitlab/: main.py  utils.py
tests/: conftest.py  mocks_gitlab_api.py  test_createtag.py  test_experimenting.py  test_fork.py  test_protecttag.py  test_rmmember.py  test_settings.py  test_unprotect.py
