[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "matfyz-teachers-gitlab"
version = "0.1"
authors = [
    {name = "Vojtech Horky", email = "horky@d3s.mff.cuni.cz"},
]
description = "CLI for mass actions on GitLab"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["teaching", "gitlab"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]
dependencies = [
    "dateparser >= 1.1.0",
    "python-gitlab >= 3.6.0",
]

[project.scripts]
teachers_gitlab = "matfyz.gitlab.teachers_gitlab:main"
